@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-09T01:18:33Z",
-  "count" : 7,
-  "count_minmax" : [ 4, 7 ],
-  "count_prev_day_inc" : 5,
-  "count_prev_day_dec" : 0,
-  "uniques" : 4,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_prev_day_inc" : 3,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-22T08:18:47Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 7 ],
+  "count_decinc" : [ -4, +0 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -2, +0 ]
 }
