@@ -1,3 +1,10 @@
+2022-05-22T08:18:47Z:
+* notice: last 14d: unq all: 15 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 156 235 / 189 292
+* notice: next accum: outdated-unq outdated-all / unq all: 156 235 / 187 288
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -4 / +0 +0 -2 -4 / 2 3
+* notice: changed dates: [2022-05-08]
+
 2022-05-21T08:19:35Z:
 * notice: last 14d: unq all: 15 57
 * notice: prev accum: outdated-unq outdated-all / unq all: 156 235 / 188 291
